--- a/css/estilo.css
+++ b/css/estilo.css
@@ -260,7 +260,7 @@ body {
 
 /* ===== SECCIÓN HERO ===== */
 .seccion-hero {
-        background: linear-gradient(193deg, #ffffff 0%, #009cff 100%);
+        background: linear-gradient(193deg, #ff7e0000 0%, #005185 100%);
     color: white;
     padding: 4rem 0;
     position: relative;
